[gd_scene load_steps=9 format=3 uid="uid://ctk5pf3p7atjs"]

[ext_resource type="Script" path="res://menus/in_game_menu.gd" id="1_mxadn"]
[ext_resource type="Theme" uid="uid://ierb8sk14ach" path="res://nice_theme.tres" id="1_ove8w"]
[ext_resource type="FontFile" uid="uid://t7nlkayot8jj" path="res://sprites/fonts/SuperMario256.ttf" id="3_ed8nn"]
[ext_resource type="Texture2D" uid="uid://bkfxm3p1uj0pi" path="res://sprites/bouttons/quitter.png" id="4_7pmop"]
[ext_resource type="Theme" uid="uid://cnq7lc5llgja5" path="res://sprites/bouttons/continue_button.tres" id="5_q0m32"]
[ext_resource type="Theme" uid="uid://bpo1yy4sasfng" path="res://sprites/bouttons/quit_button.tres" id="6_vekfb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ucupi"]
texture = ExtResource("4_7pmop")
texture_margin_top = 8.0
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_eryi3"]
Label/colors/font_color = Color(0.239216, 0.0862745, 0.0862745, 1)
Label/font_sizes/font_size = 80
Label/fonts/font = ExtResource("3_ed8nn")
Label/styles/normal = SubResource("StyleBoxTexture_ucupi")

[node name="in-game menu" type="CanvasLayer"]
process_mode = 2
layer = 128
script = ExtResource("1_mxadn")

[node name="in-game menu" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="in-game menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="quest panel" type="PanelContainer" parent="in-game menu/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_ove8w")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="in-game menu/MarginContainer/quest panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="VBoxContainer" parent="in-game menu/MarginContainer/quest panel/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 24.0

[node name="VBoxContainer" type="HBoxContainer" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="Control" type="Control" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="header" type="Label" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
theme = SubResource("Theme_eryi3")
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Control2" type="Control" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Control2" type="Control" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="text" type="Label" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 30.0
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="Control" type="Control" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Continue" type="Button" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_q0m32")
text = " "
icon_alignment = 1
expand_icon = true

[node name="Control3" type="Control" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Quit" type="Button" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_vekfb")
text = " "
icon_alignment = 1
expand_icon = true

[node name="Control2" type="Control" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 31.0

[connection signal="pressed" from="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="in-game menu/MarginContainer/quest panel/MarginContainer/GridContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
